# interview_case_solution

Interview-case-othermethodnew2/doc/: mainpage.dox
Interview-case-othermethodnew2/src/: CMakeLists.txt  main.c
Interview-case-othermethodnew2/src/drivers/adc_driver/: adc_driver.c  adc_driver.h
Interview-case-othermethodnew2/src/torqueCalculations/: analogVoltage_to_pedalAngle.c  analogVoltage_to_pedalAngle.h  digital_to_analog_conversion.c  digital_to_analog_conversion.h  torque_calculation.c  torque_calculation.h
